@@ -77,6 +77,7 @@ lib/Psh/Builtins/Rehash.pm
 lib/Psh/Builtins/Rename.pm
 lib/Psh/Builtins/Set.pm
 lib/Psh/Builtins/Setenv.pm
+lib/Psh/Builtins/Sudo.pm
 lib/Psh/Builtins/Source.pm
 lib/Psh/Builtins/Strategy.pm
 lib/Psh/Builtins/Symbols.pm
